--- a/RESTfulHotel.csproj
+++ b/RESTfulHotel.csproj
@@ -3,11 +3,20 @@
     <PropertyGroup>
         <TargetFramework>netcoreapp2.2</TargetFramework>
         <AspNetCoreHostingModel>InProcess</AspNetCoreHostingModel>
+        <Authors>Dennis Peld</Authors>
+        <Description>The RESTfulHotel is a Web API project, that implements a web service with GET request, which imports a json file with hotel rates, filters the list by means of the parameters and returns a filtered list.</Description>
+        <Copyright>Dennis Peld</Copyright>
+        <PackageProjectUrl>https://github.com/dennispeld/RESTfulHotel</PackageProjectUrl>
+        <RepositoryUrl>https://github.com/dennispeld/RESTfulHotel</RepositoryUrl>
+    </PropertyGroup>
+
+    <PropertyGroup Condition=" '$(Configuration)' == 'Release' ">
+      <PlatformTarget>x64</PlatformTarget>
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Microsoft.AspNetCore.App"/>
-        <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All"/>
+        <PackageReference Include="Microsoft.AspNetCore.App" />
+        <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All" />
     </ItemGroup>
 
 </Project>
